[project]
name = "planner"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pschlo", email = "70105856+pschlo@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
